remove sun.security requirement